Slightly safer java_opts
git-svn-id: http://anonsvn.jboss.org/repos/weld/ri/trunk@1548 1c488680-804c-0410-94cd-c6b725194a0e